fix: Use overflow auto instead of scroll. (#1707)

--- a/frontend/src/views/Landing/components/ClusterConfig/components/ConfirmConfigModal/components/AffectectedPipelinesTable/AffectedPipelinesTable.module.css
+++ b/frontend/src/views/Landing/components/ClusterConfig/components/ConfirmConfigModal/components/AffectectedPipelinesTable/AffectedPipelinesTable.module.css
@@ -1,6 +1,6 @@
 .base {
   max-height: 15.25rem;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .tableCell {
